--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="card-container">
+<div class="card-matrix">
     <mat-card *ngFor="let user of users">
       <mat-card-header>
         <div mat-card-avatar class="card-avatar">
@@ -8,10 +8,10 @@
         <mat-card-subtitle>{{ user.email }}</mat-card-subtitle>
       </mat-card-header>
       <mat-card-content>
-        <!-- Ajoutez les informations supplémentaires de l'utilisateur ici -->
+        <!-- Ajouter les informations supplémentaires de l'utilisateur ici -->
       </mat-card-content>
       <mat-card-actions>
-        <!-- Ajoutez des actions pour l'utilisateur ici -->
+        <!-- Ajouter des actions pour l'utilisateur ici -->
       </mat-card-actions>
     </mat-card>
   </div>
